--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+      href="animate.min.css"
     />
     <link
       rel="stylesheet"
@@ -199,12 +199,6 @@
     </div>
 
     <script>
-      //   document.querySelector('.whatsContent').addEventListener('click', () => {
-      //       const elementToggle = document.querySelector('.whatsBox');
-      //       this.addEventListener('mousedown', () => {
-      //         elementToggle.classList.toggle('boxContent');
-      //       })
-      //   })
       function handleToggleWhats() {
         const element = document.querySelector(".whatsBox");
         const closed = document.querySelector(".whatsappClose");
